The text is all there. Now I just need to shorten it and do some editing.

--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -350,3 +350,39 @@
       primaryClass={cs.LO},
       url={https://arxiv.org/abs/2404.12905},
 }
+@article{DBLP:journals/ai/ChaviraD08,
+  author       = {Mark Chavira and
+                  Adnan Darwiche},
+  title        = {On probabilistic inference by weighted model counting},
+  journal      = {Artif. Intell.},
+  volume       = {172},
+  number       = {6-7},
+  pages        = {772--799},
+  year         = {2008}
+}
+@article{DBLP:journals/ai/Nilsson86,
+  author       = {Nils J. Nilsson},
+  title        = {Probabilistic Logic},
+  journal      = {Artif. Intell.},
+  volume       = {28},
+  number       = {1},
+  pages        = {71--87},
+  year         = {1986}
+}
+@article{vsaletic2024graded,
+  title={Graded Logics},
+  author={{\v{S}}aleti{\'c}, Dragan Z.},
+  journal={Interdisciplinary Description of Complex Systems: INDECS},
+  volume={22},
+  number={3},
+  pages={276--295},
+  year={2024},
+  publisher={Hrvatsko interdisciplinarno dru{\v{s}}tvo}
+}
+@book{novak2012mathematical,
+  title={Mathematical principles of fuzzy logic},
+  author={Nov{\'a}k, Vil{\'e}m and Perfilieva, Irina and Mockor, Jiri},
+  volume={517},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
