--- a/doc/paper/paper.tex
+++ b/doc/paper/paper.tex
@@ -97,20 +97,27 @@
 
 \begin{abstract}
   First-order model counting (FOMC) is the problem of counting the number of
-  models of a sentence in first-order logic. Recently, a new algorithm for FOMC
-  was proposed that, instead of simply providing the final count, generates
+  models of a sentence in first-order logic. Since lifted inference techniques rely on reductions to variants of FOMC, the design of scalable methods for FOMC has attracted attention from theoreticians and practitioners alike over the past decade. Recently, significant advances were achieved with the introduction of first-order knowledge compilation-based approach, called \textsc{crane}, that instead of simply providing the final count, generates
   definitions of (possibly recursive) functions, which can be evaluated with
-  different arguments to compute the model count for any domain size. However,
-  the algorithm did not include base cases in the recursive definitions. This
-  work makes three contributions. First, we demonstrate how to construct
-  function definitions that include base cases by modifying the logical formulas
-  used in the FOMC algorithm. Second, we extend the well-known circuit
-  modification technique in knowledge compilation, known as smoothing, to work
-  with the formulas corresponding to base cases. Third, we introduce a
+  different arguments to compute the model count for any domain size.  We introduce a
   compilation algorithm that transforms the function definitions into C++ code,
   equipped with arbitrary-precision arithmetic. These additions allow the new
   FOMC algorithm to scale to domain sizes over \num{500000} times larger than
   the current state of the art, as demonstrated through experimental results.
+  
+  
+%While \textsc{crane} was shown to handle formulas beyond the capabilites of prior state of the art approaches, the \textsc{crane} still required manual evaluation of constructed functions to obtain model counts. The primary contribution of our work is a fully automated FOMC algorithm that relies on function construction. 
+%  
+%  the algorithm did not include base cases in the recursive definitions. This
+%  work makes three contributions. First, we demonstrate how to construct
+%  function definitions that include base cases by modifying the logical formulas
+%  used in the FOMC algorithm. Second, we extend the well-known circuit
+%  modification technique in knowledge compilation, known as smoothing, to work
+%  with the formulas corresponding to base cases. Third, we introduce a
+%  compilation algorithm that transforms the function definitions into C++ code,
+%  equipped with arbitrary-precision arithmetic. These additions allow the new
+%  FOMC algorithm to scale to domain sizes over \num{500000} times larger than
+%  the current state of the art, as demonstrated through experimental results.
 \end{abstract}
 
 \section{Introduction}
